# escrow-smart-contract-project-

./: CARDANO_INTEGRATION.md  README.md  SMART_CONTRACT_DEPLOYMENT.md  cabal.project  drizzle.config.js  escrow-plutus.cabal  package.json  plutus.cabal  pnpm-lock.yaml  todo.md
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: BalanceCheck.tsx  TransactionConfirmation.tsx  WalletConnect.jsx
client/src/hooks/: useBalanceValidation.js  useCardanoWallet.ts  useTransactionSigning.ts
client/src/pages/: Dashboard.tsx  EscrowDetails.tsx  Home.tsx  LockFunds.jsx  TransactionHistory.jsx
drizzle/: 0001_familiar_cassandra_nova.sql  schema.js
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
plutus/: Contract.hs  EscrowV2.hs
plutus/src/: Contract.hs  EscrowV2.hs
server/: cardano.test.js  db.js  escrow.test.ts  routers.js
server/_core/: env.js  vite.js  voiceTranscription.js
server/cardano/: blockfrost.js  contract.js  transactions.js  wallet.js
