cabal-version: 3.0
name: escrow-plutus
version: 0.1.0.0
license: MIT
author: Your Name
maintainer: your.email@example.com
build-type: Simple

library
  exposed-modules: EscrowV2, Contract
  hs-source-dirs: plutus
  default-language: Haskell2010
  build-depends:
      base >= 4.9 && < 5
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutus-contract
    , cardano-api
    , containers
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fobject-code
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fplugin PlutusTx.Plugin
    -fplugin-opt PlutusTx.Plugin:defer-errors